[package]
name = "hox"
version = "0.1.0"
authors = ["Mathias Panzenböck <grosser.meister.morti@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libc = "0.2.85"
pancurses-result = { version = "0.5.1", features = ["wide"] }
